# quality-governance-platform

./: .dockerignore  .env.example  .env.sandbox.example  .flake8  .gitignore  .gitleaks.toml  .gitleaksignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .semgrep.yml  .trivyignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MYPY_ERROR_TRIAGE.md  Makefile  PHASE1_CI_ACTIVATION_CLOSEOUT.md  PLAN-gold-standard-9.5.md  README.md  SECURITY.md  STAGE0.1_COMPLETION_REPORT.md  STAGE0.1_FAILURE_TRIAGE.md  STAGE0.2_COMPLETION_REPORT.md  STAGE0.3_COMPLETION_REPORT.md  STAGE0.4_COMPLETION_REPORT.md  STAGE0.5_COMPLETION_REPORT.md  STAGE0.5_PHASE1_REPORT.md  STAGE0.5_PHASE2_REPORT.md  STAGE0.6_PHASE1_REPORT.md  STAGE0.6_PHASE2_REPORT.md  STAGE0.7_PHASE1_REPORT.md  STAGE0_ACCEPTANCE_PACK.md  STAGE0_ASSESSMENT.md  STAGE0_COMPLETION_REPORT.md  STAGE1.0_PHASE1_REPORT.md  alembic.ini  ci_error_flake8.txt  docker-compose.sandbox.yml  (+10 more)
.cursor/rules/: git-pr-workflow.mdc  governed-release-kasa.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: adr-quarterly-review.yml  azure-static-web-apps-purple-water-03205fa03.yml  change-ledger-enforcement.yml  chaos-testing.yml  ci.yml  copy-db-secret.yml  dependabot-auto-merge.yml  deploy-frontend.yml  deploy-production.yml  deploy-staging.yml  dora-metrics.yml  lockfile-update.yml  locust-soft-gate.yml  nightly-contract-probe.yml  nightly-contract-verification.yml  provision-production.yml  rollback-production.yml  security-scan.yml  swa-environment-cleanup.yml  ux-functional-coverage.yml
.zap/: rules.tsv
alembic/: env.py
alembic/versions/: 20260104_103754_bdb09892867a_initial_schema_all_modules.py  20260104_210419_dfee008952ec_add_rta_and_audit_log_tables.py  20260105_003310_7ec3d5e343a1_canonical_auditevent_schema.py  20260105_003543_f045131687e9_add_rbac_models.py  20260105_205647_ee405ad5e788_add_investigation_templates_and_runs.py  20260105_220237_02064fd78d6c_drop_root_cause_analyses_table.py  20260118183140_convert_enums_to_varchar.py  20260118220000_add_document_management_system.py  20260119200000_add_analytics_models.py  20260120_add_form_config_tables.py  20260120_add_iso27001_isms.py  20260120_add_planet_mark.py  20260120_add_uvdb_achilles.py  20260120_tier1_enterprise_features.py  20260120_tier2_ai_copilot_signatures.py  20260121_add_kri_and_sif.py  20260121_add_near_miss_and_rta_enhancements.py  20260121_add_policy_acknowledgment.py  20260121_add_rca_tools_and_competence.py  20260121_add_reporter_email_fields.py  20260121_add_workflow_engine.py  20260122_add_azure_oid_to_users.py  20260126_add_evidence_assets_and_near_miss.py  20260126_investigation_unique_source_constraint.py  20260126_stage2_investigation_enhancements.py  20260127_add_source_form_audit_fields.py  20260131_add_investigation_actions.py  20260201_add_complaint_external_ref.py  20260202_fix_investigation_action_status.py  20260220_add_audit_template_archive.py  20260220_add_capa_actions_table.py  20260220_add_compliance_automation_tables.py  20260220_add_compliance_evidence_links.py  20260220_add_enterprise_risk_register_tables.py  20260220_add_notification_tables.py  20260220_add_performance_indexes.py  20260220_add_token_blacklist.py  20260220_add_workflow_persistence_tables.py  20260220_migrate_risks_to_enterprise.py  20260220_normalize_json_to_junction_tables.py  (+171 more)
artifacts-analysis/auth-tokens/: tokens.env
artifacts-analysis/button-audit-results/: button_audit.json
artifacts-analysis/link-audit-results/: link_audit.json
docs/: ADMIN_GUIDE.md  ADR-0003-READINESS-PROBE-DB-CHECK.md  API_CONVENTIONS.md  ARCHITECTURE.md  AZURE_STAGING_BLUEPRINT.md  BRANCH_PROTECTION_CHECKLIST.md  BRANCH_PROTECTION_EVIDENCE_CHECKLIST.md  BRANCH_PROTECTION_VERIFICATION_PACK.md  CI_WORKFLOW_SETUP.md  COMPLIANCE_MATRIX.md  COMPREHENSIVE_ACTION_PLAN_v1.md  DATA_DICTIONARY.md  DEPLOYMENT_RUNBOOK.md  DISASTER_RECOVERY.md  ENVIRONMENT_CONFIG.md  FAILURE_MODES.md  GAP_ANALYSIS_BEST_IN_CLASS.md  GOVERNANCE_DRIFT_PREVENTION.md  IMPLEMENTATION_TRACKER.md  LOCAL_DEVELOPMENT.md  OPERATIONS.md  OPERATOR_RUN_SNIPPET.md  PERMISSION_MATRIX.md  PHASE-0-1-COMPLETION-REPORT.md  PHASE-2-COMPLETION-REPORT.md  SCALING_GUIDE.md  SECURITY_WAIVERS.md  SLO-SLI.md  STAGE2_COVENANTS.md  TEST_QUARANTINE_POLICY.md  USER_GUIDE.md  documentation-standards.md  openapi_stage4.0.1.json  openapi_stage4.1.1.json  slo.yaml
frontend/: .env.example  .eslintrc.cjs  .gitignore  .prettierrc  .size-limit.json  eslint.config.cjs  eslint.config.js  index.html  lighthouserc.js  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  staticwebapp.config.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
infra/: main.bicep
scripts/: _generate_uvdb_protocol_ssot.py  accessibility_audit.sh  admin_cli.py  check-bidi-chars.py  check_adr_lifecycle.py  check_api_path_drift.py  check_env_completeness.py  check_import_boundaries.py  check_mock_data.py  check_openapi_compatibility.py  check_otel_deps.py  check_portal_email_filter.sh  check_test_quarantine.py  configure_github_production.sh  conveyor_heartbeat.sh  conveyor_policy.md  deploy_azure_staging.sh  export_branch_protection.sh  generate_gate_summary.sh  generate_lockfile.sh  generate_openapi.py  generate_quality_trend.py  generate_release_evidence.sh  i18n-check.mjs  inventory_tenant_id_nullability.py  migrate_exceptions.py  post_deploy_verify.py  rehearsal_containerized_deploy.sh  report_test_quarantine.py  reset_drill.sh  run_load_test.sh  security_scan.sh  seed_ci_locust_users.py  setup_branch_protection.sh  setup_production_azure.sh  smoke_test.sh  smoke_test_full.py  validate_acceptance_pack.py  validate_baseline_gate.py  validate_branch_protection.py  (+21 more)
src/: __init__.py  main.py
tests/: QUARANTINE_POLICY.yaml  __init__.py  conftest.py  test_config_failfast.py  test_e2e_all_workflows.py  test_e2e_form_workflow.py  test_phase1_comprehensive.py  test_phase2_comprehensive.py  test_planet_mark_import_sync.py  test_risk_scoring.py  test_smoke_form_config.py  test_workflow_engine.py
(+2799 files in other folders)
