[project]
name = "quality-governance-platform"
version = "1.0.0"
description = "Enterprise-grade Quality Governance (IMS) Platform for ISO compliance management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Quality Governance Team"}
]
keywords = ["iso", "compliance", "governance", "audit", "quality"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | alembic/versions
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [".git", ".venv", "alembic/versions"]
known_first_party = ["src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
exclude = ["alembic/versions", "tests"]

# GOVPLAT-004 Type Safety Remediation Tracking
# Baseline (2026-03-01): 30 overrides, ~85 suppressed error codes
# Current  (2026-03-07): 30 overrides, ~71 suppressed error codes
# Target   (Q2 2026):   <17 overrides

# Per-module overrides for pre-existing issues
# Each module with type issues is explicitly listed with specific ignores
# This prevents masking new errors while allowing known issues

[[tool.mypy.overrides]]
module = "src.domain.services.ai_predictive_service"
# GOVPLAT-004: Incident model attribute references
disable_error_code = ["attr-defined", "arg-type", "return-value", "union-attr"]

[[tool.mypy.overrides]]
module = "src.domain.services.ai_audit_service"
# GOVPLAT-004: AuditFinding model attribute references
disable_error_code = ["attr-defined", "arg-type", "union-attr", "return-value"]

[[tool.mypy.overrides]]
module = "src.domain.services.copilot_service"
# GOVPLAT-004: Copilot service return type issues
disable_error_code = ["return-value"]

[[tool.mypy.overrides]]
module = "src.domain.services.ai_models"
# GOVPLAT-004: AI model type issues
disable_error_code = ["no-any-return", "attr-defined"]

[[tool.mypy.overrides]]
module = "src.domain.services.audit_log_service"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.domain.services.abac_service"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.domain.services.signature_service"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.domain.services.collaboration_service"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.domain.services.tenant_service"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.services.auditor_competence"
# GOVPLAT-004: Type assignment issues
disable_error_code = ["assignment", "operator"]

[[tool.mypy.overrides]]
module = "src.services.policy_acknowledgment"
# GOVPLAT-004: Return type issues
disable_error_code = ["return-value"]

[[tool.mypy.overrides]]
module = "src.infrastructure.cache.redis_cache"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.infrastructure.monitoring.azure_monitor"
# GOVPLAT-004: Azure monitor type issues
disable_error_code = ["assignment"]

[[tool.mypy.overrides]]
module = "src.api.routes.uvdb"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.api.routes.planet_mark"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.api.routes.document_control"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.api.routes.risk_register"
# GOVPLAT-004: Risk register route type issues
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "src.services.workflow_engine"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.services.risk_scoring"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.api.routes.signatures"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.api.routes.ai_intelligence"
# GOVPLAT-004: AI intelligence route type issues
disable_error_code = ["call-overload"]

[[tool.mypy.overrides]]
module = "src.api.routes.copilot"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.api.routes.push_notifications"
# GOVPLAT-004: Push notifications route type issues
disable_error_code = ["assignment", "arg-type"]

[[tool.mypy.overrides]]
module = "src.api.routes.near_miss"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.api.routes.form_config"
# GOVPLAT-004: Form config route type issues
disable_error_code = ["call-arg", "arg-type"]

[[tool.mypy.overrides]]
module = "src.api.routes.workflow"
# GOVPLAT-004: Workflow route type issues
disable_error_code = ["arg-type", "attr-defined"]

[[tool.mypy.overrides]]
module = "src.api.routes.rca_tools"
# GOVPLAT-004: RCA tools route type issues
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "src.api.routes.policy_acknowledgment"
# GOVPLAT-004: Policy acknowledgment route type issues
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "src.api.routes.kri"
# GOVPLAT-004: KRI route type issues
disable_error_code = ["attr-defined", "arg-type"]

[[tool.mypy.overrides]]
module = "src.api.routes.auditor_competence"
# GOVPLAT-004: Auditor competence route type issues
disable_error_code = ["arg-type"]

# GOVPLAT-005: Pre-existing type errors — remove overrides as modules are fixed
[[tool.mypy.overrides]]
module = [
    "src.api.middleware.audit_middleware",
    "src.api.routes.actions",
    "src.api.routes.assessments",
    "src.api.routes.assets",
    "src.api.routes.audit_templates",
    "src.api.routes.audit_trail",
    "src.api.routes.audits",
    "src.api.routes.complaints",
    "src.api.routes.compliance",
    "src.api.routes.compliance_automation",
    "src.api.routes.feature_flags",
    "src.api.routes.health",
    "src.api.routes.investigation_templates",
    "src.api.routes.iso27001",
    "src.api.routes.notifications",
    "src.api.routes.slo",
    "src.api.routes.tenants",
    "src.api.routes.workflows",
    "src.api.routes.xml_import",
    "src.domain.models.capa",
    "src.domain.services.asset_service",
    "src.domain.services.audit_service",
    "src.domain.services.auth_service",
    "src.domain.services.capa_service",
    "src.domain.services.competency_scoring_service",
    "src.domain.services.complaint_service",
    "src.domain.services.evidence_service",
    "src.domain.services.feature_flag_service",
    "src.domain.services.form_config_service",
    "src.domain.services.gdpr_service",
    "src.domain.services.governance_service",
    "src.domain.services.ims_dashboard_service",
    "src.domain.services.incident_service",
    "src.domain.services.investigation_service",
    "src.domain.services.near_miss_service",
    "src.domain.services.notification_service",
    "src.domain.services.planet_mark_service",
    "src.domain.services.risk_service",
    "src.domain.services.rta_service",
    "src.domain.services.search_service",
    "src.domain.services.telemetry_service",
    "src.domain.services.user_service",
    "src.domain.services.workflow_service",
    "src.domain.services.xml_importer_service",
    "src.infrastructure.middleware.rate_limiter",
    "src.infrastructure.tasks.notification_tasks",
    "src.infrastructure.websocket.connection_manager",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 38
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
