[project]
name = "quality-governance-platform"
version = "1.0.0"
description = "Enterprise-grade Quality Governance (IMS) Platform for ISO compliance management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Quality Governance Team"}
]
keywords = ["iso", "compliance", "governance", "audit", "quality"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | alembic/versions
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [".git", ".venv", "alembic/versions"]
known_first_party = ["src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
exclude = ["alembic/versions", "tests"]

# GOVPLAT-004 Type Safety Remediation Tracking
# Baseline  (2026-03-01): 30 overrides, ~85 suppressed error codes
# Revised   (2026-03-07): 30 overrides, ~71 suppressed error codes
# Current   (2026-03-21):  8 override blocks (consolidated)
# Promoted  (2026-04-04): ignore_errors 20→11 modules in this block (xml_import promoted 2026-04-05)
# Promoted  (2026-04-05): xml_import removed from ignore_errors (GOVPLAT-005)
# Target    (Q2 2026):    ≤5 override blocks

# ── Group 1: AI / ML service modules (attr-defined, arg-type, return-value, union-attr, no-any-return) ──
[[tool.mypy.overrides]]
module = [
    "src.domain.services.ai_predictive_service",
    "src.domain.services.ai_audit_service",
    "src.domain.services.copilot_service",
    "src.domain.services.ai_models",
]
disable_error_code = ["attr-defined", "arg-type", "return-value", "union-attr", "no-any-return"]

# ── Group 2: Route modules needing arg-type / call-arg ──
[[tool.mypy.overrides]]
module = [
    "src.api.routes.rca_tools",
    "src.api.routes.policy_acknowledgment",
    "src.api.routes.auditor_competence",
    "src.api.routes.form_config",
]
disable_error_code = ["arg-type", "call-arg"]

# ── Group 3: Route modules needing attr-defined + arg-type ──
[[tool.mypy.overrides]]
module = [
    "src.api.routes.workflow",
    "src.api.routes.kri",
    "src.api.routes.risk_register",
]
disable_error_code = ["attr-defined", "arg-type"]

# ── Group 4: Modules needing assignment / operator ──
[[tool.mypy.overrides]]
module = [
    "src.services.auditor_competence",
    "src.infrastructure.monitoring.azure_monitor",
    "src.api.routes.push_notifications",
]
disable_error_code = ["assignment", "operator", "arg-type"]

# ── Group 5: Modules with return-value issues ──
[[tool.mypy.overrides]]
module = "src.services.policy_acknowledgment"
disable_error_code = ["return-value"]

# ── Group 6: AI intelligence route (call-overload) ──
[[tool.mypy.overrides]]
module = "src.api.routes.ai_intelligence"
disable_error_code = ["call-overload"]

# ── GOVPLAT-005: Pre-existing cross-module type errors — reduced from 64 → 20 → 9 modules (planet_mark promoted) ──
# 55 modules promoted to full type checking total (incl. xml_import, planet_mark). Remaining 9 have cross-module type
# conflicts (assignment, operator, attr-defined) that require coordinated model+route fixes.
[[tool.mypy.overrides]]
module = [
    "src.api.routes.actions",
    "src.api.routes.audits",
    "src.api.routes.document_control",
    "src.api.routes.iso27001",
    "src.api.routes.signatures",
    "src.domain.services.form_config_service",
    "src.domain.services.risk_service",
    "src.domain.services.search_service",
    "src.infrastructure.tasks.pams_sync_tasks",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
# Target for local full-suite runs (all tests combined). Per-suite CI gates are lower:
# unit: 48%, integration: 43% (measured coverage as at 2026-04-07, EG-02 remediation).
# Raise CI gates incrementally as test coverage improves.
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
